[tool.poetry]
name = "usermaven"
version = "0.1.2"
description = ""
authors = ["usermaven <azhar@usermaven.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = ">=2.7,<3.0"
six = ">=1.5"
monotonic = ">=1.5"
backoff = ">=1.10.0,<2.0.0"
python-dateutil = ">2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
